[build-system]
requires = ["setuptools>=69.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "braze-client-sdk"
version = "1.0.0"
authors = [
    { name = "Marcelo Kafels" },
]
description = "Creates a SDK for Braze platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["braze", "sdk"]
dependencies = [
    "pydantic>=2.6.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = ["mock", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/Kafels/braze-python-sdk/"
Issues = "https://github.com/Kafels/braze-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["code"]
include = ["braze*"]
exclude = ["tests*"]
namespaces = false